--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <script src="scripts/main.js" defer></script>
   </head>
   <body class="page__body">
+
     <header class="header page__section">
       <div class="container">
         <div class="header__content">
@@ -23,7 +24,11 @@
                 alt="Miami Condo Kings"
               >
             </a>
-            <a href="tel:+1 234 555-55-55" class="icon icon--phone header__call"></a>
+            <a href="tel:+1 234 555-55-55" class="icon icon--phone header__call">
+              <div class="icon__tootip">
+                +1 234 555-55-55
+              </div>
+            </a>
           </div>
           <h1 class="header__title">
             Miami
@@ -35,6 +40,7 @@
       </div>
 
     </header>
+
     <nav class="page__menu menu" id="menu">
       <div class="container">
         <div class="menu__content">
