--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
     <script src="scripts/main.js" defer></script>
   </head>
-  <body class="page__body">
+  <body class="page__body page__body--with-menu">
 
     <header class="header page__section">
       <div class="container">
@@ -96,7 +96,7 @@
       <section class="page__section about" id="about-us">
         <div class="container">
           <div class="grid grid--desktop">
-            <div class="grid__item grid__item--1-4">
+            <div class="grid__item grid__item--desktop-1-4">
               <h2 class="about__title ">
                 Miami best
                 <br>
@@ -106,7 +106,7 @@
                 </a>
               </h2>
             </div>
-            <div class="grid__item grid__item--7-12">
+            <div class="grid__item grid__item--desktop-7-12">
               <a href="#" class="about__subtitle">
                 Over 50 years experience in love.
               </a>
@@ -246,7 +246,7 @@
           </div>
 
           <div class="grid grid--desktop">
-            <div class="grid__item grid__item--6-7">
+            <div class="grid__item grid__item--desktop-6-7">
               <a href="#" class="button">
                 View all
               </a>
@@ -262,7 +262,7 @@
 
           <div class="grid grid--desktop">
 
-            <div class="testimonials__item grid__item grid__item--1-4">
+            <div class="testimonials__item grid__item grid__item--desktop-1-4">
               <div class="testimonial">
                 <div class="testimonial__photo-container">
                   <img
@@ -285,7 +285,7 @@
               </div>
             </div>
 
-            <div class="testimonials__item grid__item grid__item--5-8">
+            <div class="testimonials__item grid__item grid__item--desktop-5-8">
               <div class="testimonial">
                 <div class="testimonial__photo-container">
                   <img
@@ -309,7 +309,7 @@
               </div>
             </div>
 
-            <div class="testimonials__item grid__item grid__item--9-12">
+            <div class="testimonials__item grid__item grid__item--desktop-9-12">
               <div class="testimonial">
                 <div class="testimonial__photo-container">
                   <img
@@ -344,7 +344,7 @@
           </h2>
 
           <div class="grid grid--desktop">
-            <div class="grid__item--1-2">
+            <div class="grid__item--desktop-1-2">
               <div class="contacts-us__info">
                 <div class="contacts-us__info-title">
                   Phone
@@ -364,7 +364,7 @@
               </div>
 
             </div>
-            <div class="grid__item--4-5">
+            <div class="grid__item--desktop-4-5">
               <div class="contacts-us__info contacts-us__info--last">
                 <div class="contacts-us__info-title">
                   Address
@@ -378,7 +378,7 @@
                 </a>
               </div>
             </div>
-            <div class="grid__item--8-12">
+            <div class="grid__item--desktop-8-12">
               <form>
                 <input
                   type="text"
@@ -421,5 +421,7 @@
         >
       </a>
     </footer>
+
+    <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
