js file editing

--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link
+      rel="shortcut icon"
+      href="./images/favicon.png"
+      type="image/x-icon"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
     <script src="scripts/main.js" defer></script>
   </head>
-  <body class="page__body page__body--with-menu">
+  <body class="page__body">
 
     <header class="header page__section">
       <div class="container">
@@ -422,6 +427,5 @@
       </a>
     </footer>
 
-    <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
